--- a/404.html
+++ b/404.html
@@ -1,10 +1,12 @@
 ---
-layout: layout
-title: Page not found!
+layout: default
+title: 404 - Page not found
 ---
 
-<div class="container">
-  <div class="page-not-found">
-    <h3>Uh oh! Page not found!</h3>
-  </div>
+<div class="text-center">
+  <h1>Whoops, this page doesn't exist.</h1>
+  <h1>Move along. (404 error)</h1>
+  <br/>
+
+  <img src="{{ site.baseurl }}/img/404-southpark.jpg" />
 </div>
