--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ meta-description: "Undergraduate Computer Science student. Loves all things data
 bigimg:
   - "/img/big-imgs/triund.jpg": "Triund, Dharamshala, India (2014)"
   - "/img/big-imgs/phongnha.jpg" : "Phong Nha Ke Bang, Vietnam (2015)"
-  - "/img/bigs-imgs/bangkok.jpg" : "Bangkok, Thailand (2016)"
+  - "/img/big-imgs/bangkok.jpg" : "Bangkok, Thailand (2016)"
   - "/img/big-imgs/trolltunga.jpg" : "Trolltunga, Norway (2014)"
   - "/img/big-imgs/siemreap.jpg" : "Siem Reap, Cambodia (2015)"
   - "/img/big-imgs/andamans.jpg" : "Andaman Islands, India (2014)"
