--- a/about.html
+++ b/about.html
@@ -14,17 +14,17 @@ Currently a undergraduate student in <strong>Computer Science</strong> at the Bi
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I love programming in<strong>python and lua</strong>. Check out <a href="/projects">my projects</a>. I also have deep interest in security and data.
+I love programming in <strong>python and lua</strong>. Check out <a href="/projects">my projects</a>. I also have deep interest in security and data.
 </p>
 
 <p class="about-text">
 <span class="fa fa-heart about-icon"></span>
-I absolutely love<strong>travelling</strong> and I am always ready for a trip. I would love to have a job that allows me to work remotely. I recently went accross south east asia for a month in under $900. I love reading about things and getting into discussions about what I read. I live for good food.
+I absolutely love <strong>travelling</strong> and I am always ready for a trip. I would love to have a job that allows me to work remotely. I recently went accross south east asia for a month in under $900. I love reading about things and getting into discussions about what I read. I live for good food.
 </p>
 
 <p class="about-text">
 <span class="fa fa-file-text-o about-icon"></span>
-The <strong><a href="/projects">projects</a></strong> page lists some of my work. You can learn more about my work via my.<a href="/files/resume.pdf" target="_blank">resume</a>. The resume is a bit old though.
+The <strong><a href="/projects">projects</a></strong> page lists some of my work. You can learn more about my work via my <a href="/files/resume.pdf" target="_blank">resume</a>. The resume is a bit old though.
 </p>
 
 <p class="about-text">
