--- a/about.html
+++ b/about.html
@@ -29,7 +29,12 @@ The <strong><a href="/projects">projects</a></strong> page lists some of my work
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i> and now I am <i>Pilani, Rajastan</i> where I am doing my Bachelors in Computer Science. I have visited Thailand, Singapore, Malaysia, Laos, Cambodia, Vietnam, Sweden, Norway, England, Scotland, Wales, Germany, Italy, France, Switzerland and Vatican City I hope to visit Greece and Nepal this year.
+Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i> and now I am <i>Pilani, Rajastan</i> where I am doing my Bachelors in Computer Science.
+</p>
+
+<p class="about-text">
+<span class="fa fa-suitcase about-icon"></span>
+I have visited Thailand, Singapore, Malaysia, Laos, Cambodia, Vietnam, Sweden, Norway, England, Scotland, Wales, Germany, Italy, France, Switzerland and Vatican City. I hope to visit Greece and Nepal this year.
 </p>
 
 <p>I also have <a href="https://0x-gyani.tumblr.com/">an old blog</a>, mostly from my sophmore year.</p>
