--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Gyanendra Mishra"
-subtitle: Backpacker / Web Developer / Software Developer / Security N00b / Data Science Enthusiast
+subtitle: Backpacker / Web Developer / Software Developer / Aspiring Security Professional / Data Science Enthusiast
 css: "/css/index.css"
 meta-title: "Gyanendra Mishra"
 meta-description: "Undergraduate Computer Science student. Loves all things data and security. I will code for airtickets."
