--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Gyanendra Mishra"
 subtitle: Backpacker / Web Developer / Software Developer / Aspiring Security Professional / Data Science Enthusiast
 css: "/css/index.css"
 meta-title: "Gyanendra Mishra"
-meta-description: "Undergraduate Computer Science student. Loves all things data and security. I will code for airtickets."
+meta-description: "Hi I am Gyanendra Mishra, I am an undergraduate computer science student at the Birla Institute of Technology and Science. I love to program in Python and Lua. I am interested in web application security and data science. I go by @h4ck3rk3y on github and by gyani everywhere else."
 bigimg:
   - "/img/big-imgs/triund.jpg": "Triund, Dharamshala, India (2014)"
   - "/img/big-imgs/phongnha.jpg" : "Phong Nha Ke Bang, Vietnam (2015)"
