Edits in the index page.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: page
 title: "Gyanendra Mishra"
-subtitle: Backpacker / Web Developer / Software Developer / Aspiring Security Professional / Data Science Enthusiast
+subtitle: Backpacker / Web Developer / Software Developer / Aspiring Security Professional
 css: "/css/index.css"
 meta-title: "Gyanendra Mishra"
-meta-description: "Hi I am Gyanendra Mishra, I am an undergraduate computer science student at the Birla Institute of Technology and Science. I love to program in Python and Lua. I am interested in web application security and data science. I go by @h4ck3rk3y on github and by gyani everywhere else."
+meta-description: "Hi I am Gyanendra Mishra, I am an undergraduate computer science student at the Birla Institute of Technology and Science. I love to program in Python and Lua. I am interested in web application security and conversational interfaces. I go by @h4ck3rk3y on github and by gyani everywhere else."
 bigimg:
   - "/img/big-imgs/triund.jpg": "Triund, Dharamshala, India (2014)"
   - "/img/big-imgs/phongnha.jpg" : "Phong Nha Ke Bang, Vietnam (2015)"
