added images to front page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ bigimg:
   - "/img/big-imgs/nhatrang.jpg" : "Nha Trang, Vietnam (2015)"
   - "/img/big-imgs/penh.jpg" : "Phnom Penh, Camobdia (2015)"
   - "/img/big-imgs/kuangsi.jpg" : "Luang Prabang, Laos (2016)"
+  - "/img/big-imgs/Santorini.jpg": "Sunset at Oia, Santorini, Greece (2016)"
+  - "/img/big-imgs/Pantheon.jpg": "Pantheon, Athens, Greece (2016)"
 ---
 
 <div class="index-posts-title">Blog</div>
