--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ bigimg:
   - "/img/big-imgs/kuangsi.jpg" : "Luang Prabang, Laos (2016)"
   - "/img/big-imgs/Santorini.jpg": "Sunset at Oia, Santorini, Greece (2016)"
   - "/img/big-imgs/Pantheon.jpg": "Pantheon, Athens, Greece (2016)"
+  - "/img/blog/dharamsala/rainbow.jpg": "Triund, Dharamsala, India (2016)"
 ---
 
 <div class="index-posts-title">Blog</div>
