changes to index and about page

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ I absolutely love <strong>travelling</strong> and I am always ready for a trip. 
 
 <p class="about-text">
 <span class="fa fa-file-text-o about-icon"></span>
-The <strong><a href="/projects">projects</a></strong> page lists some of my work. You can learn more about my work via my <a href="/files/resume.pdf" target="_blank">resume</a>. The resume is a bit old though.
+The <strong><a href="/projects">projects</a></strong> page lists some of my work. You can learn more about my work via my <a href="/files/resume.pdf" target="_blank">resume</a>.
 </p>
 
 <p class="about-text">
