updated about page

--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@ css: "/css/aboutme.css"
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Currently a undergraduate student in <strong>Computer Science</strong> at the Birla Institute of Technology and Science
+Currently an undergraduate student in <strong>Computer Science</strong> at the Birla Institute of Technology and Science
 </p>
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I love programming in <strong>python and lua</strong>. Check out <a href="/projects">my projects</a>. I also have deep interest in security and data.
+I love programming in <strong>python and lua</strong>. Check out <a href="/projects">my projects</a>. I also have deep interest in security which I have tried to follow through courses, moocs, books, internships and research.
 </p>
 
 <p class="about-text">
@@ -29,12 +29,12 @@ The <strong><a href="/projects">projects</a></strong> page lists some of my work
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i> and now I am <i>Pilani, Rajastan</i> where I am doing my Bachelors in Computer Science.
+Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i> and now I am <i>Pilani, Rajastan</i> where I am doing my Bachelors in Computer Science. I'll be spending my next and last semester in Singapore where I'll be doing research on the security of cyber physical systems.
 </p>
 
 <p class="about-text">
 <span class="fa fa-suitcase about-icon"></span>
-I have visited Thailand, Singapore, Malaysia, Laos, Cambodia, Vietnam, Sweden, Norway, England, Scotland, Wales, Germany, Italy, France, Switzerland and Vatican City. I hope to visit Greece and Nepal this year.
+I have visited Thailand, Singapore, Malaysia, Laos, Cambodia, Vietnam, Sweden, Norway, England, Scotland, Wales, Germany, Italy, France, Switzerland and Vatican City. In 2016  I visited Greece and Nepal both were amazing.
 </p>
 
 <p>I also have <a href="https://0x-gyani.tumblr.com/">an old blog</a>, mostly from my sophmore year.</p>
