fixed Rajasthan typo

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ The <strong><a href="/projects">projects</a></strong> page lists some of my work
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i> and now I am <i>Pilani, Rajastan</i> where I am doing my Bachelors in Computer Science. I'll be spending my next and last semester in Singapore where I'll be doing research on the security of cyber physical systems.
+Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i> and now I am <i>Pilani, Rajasthan</i> where I am doing my Bachelors in Computer Science. I'll be spending my next and last semester in Singapore where I'll be doing research on the security of cyber physical systems.
 </p>
 
 <p class="about-text">
