--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@ bigimg:
   - "/img/big-imgs/Santorini.jpg": "Sunset at Oia, Santorini, Greece (2016)"
   - "/img/big-imgs/Pantheon.jpg": "Pantheon, Athens, Greece (2016)"
   - "/img/blog/dharamsala/rainbow.jpg": "Triund, Dharamsala, India (2016)"
+  - "/img/blog/danube.jpg": "Budapest, Hungary (2017)"
+  - "/img/blog/welcome_melaka.jpg": "Melaka, Malasyia (2017)"
+  - "/img/blog/buckingham.jpg": "Buckingham Palace, London, UK (2017)"
+  - "/img/blog/schnitzel.jpg": "Weiener Schnitzel, Austria, Vienna (2017)"
+
 ---
 
 <div class="index-posts-title">Blog</div>
