--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Gyanendra Mishra"
-subtitle: Backpacker / Web Developer / Aspiring Security Professional
+subtitle: Backpacker / Developer / Information Security
 css: "/css/index.css"
 meta-title: "Gyanendra Mishra"
 meta-description: "Hi I am Gyanendra Mishra, I am an undergraduate computer science student at the Birla Institute of Technology and Science. I love to program in Python and Lua. I am interested in information security and software development. I go by @h4ck3rk3y on github and by gyani everywhere else."
