update to the about section;

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ css: "/css/aboutme.css"
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Currently an undergraduate student in <strong>Computer Science</strong> at the Birla Institute of Technology and Science
+Graduate with a Bachelors in <strong>Computer Science</strong> from the Birla Institute of Technology and Science in less than a month!
 </p>
 
 <p class="about-text">
@@ -19,7 +19,7 @@ I love programming in <strong>python and lua</strong>. Check out <a href="/proje
 
 <p class="about-text">
 <span class="fa fa-heart about-icon"></span>
-I absolutely love <strong>travelling</strong> and I am always ready for a trip. I would love to have a job that allows me to work remotely. I recently went accross south east asia for a month in under $900. I love reading about things and getting into discussions about what I read. I live for good food.
+I absolutely love <strong>travelling</strong> and I am always ready for a trip. I would love to have a job that allows me to work remotely.I love reading about things and getting into discussions about what I read. I live for good food.
 </p>
 
 <p class="about-text">
@@ -29,12 +29,12 @@ The <strong><a href="/projects">projects</a></strong> page lists some of my work
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i> and now I am <i>Pilani, Rajasthan</i> where I am doing my Bachelors in Computer Science. I'll be spending my next and last semester in Singapore where I'll be doing research on the security of cyber physical systems.
+Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i>,<i> Bachelors from Pilani, Rajasthan</i> and I just got back from my thesis in <i>Sinapore</i>.
 </p>
 
 <p class="about-text">
 <span class="fa fa-suitcase about-icon"></span>
-I have visited Thailand, Singapore, Malaysia, Laos, Cambodia, Vietnam, Sweden, Norway, England, Scotland, Wales, Germany, Italy, France, Switzerland and Vatican City. In 2016  I visited Greece and Nepal both were amazing.
+I have visited Thailand, Singapore, Malaysia, Laos, Cambodia, Vietnam, Sweden, Norway, England, Scotland, Wales, Germany, Italy, France, Switzerland and Vatican City. In 2016  I visited Greece and Nepal both were amazing. In 2018 I added Austria and Hungary to the list.
 </p>
 
 <p>I also have <a href="https://0x-gyani.tumblr.com/">an old blog</a>, mostly from my sophmore year.</p>
