Changed website description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Gyanendra Mishra"
 subtitle: Backpacker / Developer / Information Security
 css: "/css/index.css"
 meta-title: "Gyanendra Mishra"
-meta-description: "Hi I am Gyanendra Mishra, I am an undergraduate computer science student at the Birla Institute of Technology and Science. I love to program in Python and Lua. I am interested in information security and software development. I go by @h4ck3rk3y on github and by gyani everywhere else."
+meta-description: "Hi I am Gyanendra and I have done a Bachelors in Computer Science from BITS Pilani. I love to program. I am interested in information security and software development. I go by @h4ck3rk3y on github and by gyani everywhere else."
 bigimg:
   - "/img/blog/nepal/abc.jpg": "Annapurna Base Camp, Nepal (2016)"
   - "/img/blog/nepal/fewatal.jpg": "Fewa Tal, Pokhara, Nepal (2016)"
