new images in the front roll

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ bigimg:
   - "/img/blog/welcome_melaka.jpg": "Melaka, Malasyia (2017)"
   - "/img/blog/buckingham.jpg": "Buckingham Palace, London, UK (2017)"
   - "/img/blog/schnitzel.jpg": "Weiener Schnitzel, Austria, Vienna (2017)"
+  - "/img/blog/north-east/brahmaputra.jpg": "Brahmaputra River, Tezpur, Assam, India (2017)"
+  - "/img/blog/north-east/root.jpg": "Root Bridge, Mawlynnong, Meghalya, India (2017)"
+
 
 ---
 
