Updated about section

--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@ css: "/css/aboutme.css"
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Graduate with a Bachelors in <strong>Computer Science</strong> from the Birla Institute of Technology and Science in less than a month!
+<strong>Computer Science</strong> graduate from the Birla Institute of Technology and Science
 </p>
 
 <p class="about-text">
 <span class="fa fa-code about-icon"></span>
-I love programming in <strong>python and lua</strong>. Check out <a href="/projects">my projects</a>. I also have deep interest in security which I have tried to follow through courses, moocs, books, internships and research.
+I love programming in <strong>python and lua</strong>. Check out <a href="/projects">my projects</a>. I also have deep interest in security which I have tried to follow through courses, moocs, books, internships and research. Recently I have been using a lot of C++ as that's the weapon of choice at Bloomberg.
 </p>
 
 <p class="about-text">
@@ -30,6 +30,8 @@ The <strong><a href="/projects">projects</a></strong> page lists some of my work
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
 Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i>,<i> Bachelors from Pilani, Rajasthan</i> and I just got back from my thesis in <i>Sinapore</i>.
+
+Since September 2017 I have been livng in London.
 </p>
 
 <p class="about-text">
