--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "Gyanendra Mishra"
-subtitle: Software Engineer / Backpacker / Craftsman
+subtitle: Hacker 
 css: "/css/index.css"
 meta-title: "Gyanendra Mishra"
 meta-description: "Hi I am Gyanendra and I have done a Bachelors in Computer Science from BITS Pilani. I love to program. I am interested in information security and software development. I go by @h4ck3rk3y on github and by gyani everywhere else."
