--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ bigimg:
   - "/img/blog/schnitzel.jpg": "Weiener Schnitzel, Austria, Vienna (2017)"
   - "/img/blog/north-east/brahmaputra.jpg": "Brahmaputra River, Tezpur, Assam, India (2017)"
   - "/img/blog/north-east/root.jpg": "Root Bridge, Mawlynnong, Meghalya, India (2017)"
-
+  - "/img/big-imgs/windermere.jpg": "Lake Windermere, England (2018)"
 
 ---
 
