--- a/about.html
+++ b/about.html
@@ -8,34 +8,34 @@ css: "/css/aboutme.css"
 <div id="aboutme-section">
 
 <p class="about-text">
-<span class="fa fa-graduation-cap about-icon"></span>
+<span class="fa-solid fa-graduation-cap about-icon"></span>
 <strong>Computer Science</strong> graduate from the Birla Institute of Technology and Science
 </p>
 
 <p class="about-text">
-<span class="fa fa-code about-icon"></span>
+<span class="fa-solid fa-code about-icon"></span>
 I love programming in <strong>python and lua</strong>. Check out <a href="/projects">my projects</a>. I also have deep interest in security which I have tried to follow through courses, moocs, books, internships and research. Recently I have been using a lot of C++ as that's the weapon of choice at Bloomberg.
 </p>
 
 <p class="about-text">
-<span class="fa fa-heart about-icon"></span>
+<span class="fa-solid fa-heart about-icon"></span>
 I absolutely love <strong>travelling</strong> and I am always ready for a trip. I would love to have a job that allows me to work remotely.I love reading about things and getting into discussions about what I read. I live for good food.
 </p>
 
 <p class="about-text">
-<span class="fa fa-file-text-o about-icon"></span>
+<span class="fa-regular fa-file-lines about-icon"></span>
 The <strong><a href="/projects">projects</a></strong> page lists some of my work. You can learn more about my work via my <a href="/files/resume.pdf" target="_blank">resume</a>.
 </p>
 
 <p class="about-text">
-<span class="fa fa-globe about-icon"></span>
+<span class="fa-solid fa-globe about-icon"></span>
 Born in <i>Tezpur, Assam</i>, did my pre school in <i>Jalandhar, Punjab</i>, primary school in <i>Mumbai, Maharashtra</i>,  middle school in <i>Jammu, Jammu and Kashmir</i> high school in <i>Pune, Maharashtra</i>,<i> Bachelors from Pilani, Rajasthan</i> and I just got back from my thesis in <i>Sinapore</i>.
 
 Since September 2017 I have been livng in London.
 </p>
 
 <p class="about-text">
-<span class="fa fa-suitcase about-icon"></span>
+<span class="fa-solid fa-suitcase about-icon"></span>
 I have visited Thailand, Singapore, Malaysia, Laos, Cambodia, Vietnam, Sweden, Norway, England, Scotland, Wales, Germany, Italy, France, Switzerland and Vatican City. In 2016  I visited Greece and Nepal both were amazing. In 2018 I added Austria and Hungary to the list.
 </p>
 
